Add vibrant colors and download links to website - Enhanced UI with gradients, animations, and floating download button - Added direct download links from GitHub - Improved visual appeal with colorful sections - Added download tracking and notifications

--- a/website/index.html
+++ b/website/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>GrammarGuard - Your AI Writing Assistant</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="download-section.css">
 </head>
 <body>
   <!-- Navigation -->
@@ -39,15 +40,20 @@
           and style in real-time across all your favorite websites.
         </p>
         <div class="hero-buttons">
-          <a href="#install" class="btn btn-primary">
+          <a href="https://github.com/draphael123/grammarhelper/archive/refs/heads/main.zip" class="btn btn-primary btn-download" download>
             <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
               <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path>
               <polyline points="7 10 12 15 17 10"></polyline>
               <line x1="12" y1="15" x2="12" y2="3"></line>
             </svg>
-            Install Extension
+            Download Extension
           </a>
-          <a href="#demo" class="btn btn-secondary">Watch Demo</a>
+          <a href="https://github.com/draphael123/grammarhelper" target="_blank" class="btn btn-secondary">
+            <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+              <path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path>
+            </svg>
+            View on GitHub
+          </a>
         </div>
         <div class="hero-stats">
           <div class="stat">
@@ -270,15 +276,18 @@
           <div class="step-number">1</div>
           <div class="step-content">
             <h3>Download the Extension</h3>
-            <p>Click the button below to download the GrammarGuard extension package.</p>
-            <button class="btn btn-primary">
+            <p>Click the button below to download the GrammarGuard extension package from GitHub.</p>
+            <a href="https://github.com/draphael123/grammarhelper/archive/refs/heads/main.zip" class="btn btn-primary btn-download" download>
               <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                 <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path>
                 <polyline points="7 10 12 15 17 10"></polyline>
                 <line x1="12" y1="15" x2="12" y2="3"></line>
               </svg>
               Download Extension
-            </button>
+            </a>
+            <p style="margin-top: 10px; font-size: 13px; color: #64748b;">
+              Or <a href="https://github.com/draphael123/grammarhelper" target="_blank" style="color: #6366f1; text-decoration: none; font-weight: 600;">visit GitHub</a> to clone the repository
+            </p>
           </div>
         </div>
 
@@ -305,6 +314,24 @@
             <p>Click "Load unpacked" and select the GrammarGuard folder you downloaded. That's it!</p>
           </div>
         </div>
+      </div>
+
+      <div class="download-info-box">
+        <svg width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+          <path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path>
+        </svg>
+        <div class="info-content">
+          <h4>💡 Quick Download</h4>
+          <p>Download the complete extension package directly from our GitHub repository. Includes all files, documentation, and assets.</p>
+        </div>
+        <a href="https://github.com/draphael123/grammarhelper/archive/refs/heads/main.zip" class="btn btn-primary btn-download download-btn" download>
+          <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+            <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path>
+            <polyline points="7 10 12 15 17 10"></polyline>
+            <line x1="12" y1="15" x2="12" y2="3"></line>
+          </svg>
+          Download ZIP
+        </a>
       </div>
 
       <div class="install-note">
@@ -430,15 +457,23 @@
     <div class="container">
       <h2>Ready to Write Better?</h2>
       <p>Join thousands of users who write with confidence using GrammarGuard</p>
-      <a href="#install" class="btn btn-primary btn-large">
-        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-          <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path>
-          <polyline points="7 10 12 15 17 10"></polyline>
-          <line x1="12" y1="15" x2="12" y2="3"></line>
-        </svg>
-        Install GrammarGuard Now
-      </a>
-      <p class="cta-note">Free to use • No credit card required • Works everywhere</p>
+      <div style="display: flex; gap: 15px; justify-content: center; margin-top: 30px; flex-wrap: wrap;">
+        <a href="https://github.com/draphael123/grammarhelper/archive/refs/heads/main.zip" class="btn btn-primary btn-large btn-download" download>
+          <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+            <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path>
+            <polyline points="7 10 12 15 17 10"></polyline>
+            <line x1="12" y1="15" x2="12" y2="3"></line>
+          </svg>
+          Download Now
+        </a>
+        <a href="https://github.com/draphael123/grammarhelper" target="_blank" class="btn btn-secondary btn-large">
+          <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+            <path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path>
+          </svg>
+          View on GitHub
+        </a>
+      </div>
+      <p class="cta-note" style="margin-top: 20px;">Free to use • Open Source • No credit card required • Works everywhere</p>
     </div>
   </section>
 
@@ -491,6 +526,18 @@
       </div>
     </div>
   </footer>
+
+  <!-- Floating Download Button -->
+  <div class="floating-download" id="floatingDownload">
+    <a href="https://github.com/draphael123/grammarhelper/archive/refs/heads/main.zip" class="btn" download>
+      <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+        <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path>
+        <polyline points="7 10 12 15 17 10"></polyline>
+        <line x1="12" y1="15" x2="12" y2="3"></line>
+      </svg>
+      Download
+    </a>
+  </div>
 
   <script src="script.js"></script>
 </body>
