ðŸ‡µðŸ‡­ Add Filipino/Tagalog Language Support v2.1.0
Major Features:
- Full Filipino (Tagalog) grammar and spelling checking
- 35+ Filipino-specific grammar rules
- Automatic language detection (English, Filipino, Mixed)
- Bilingual mode for Taglish support
- Language selector in settings and website demo

Filipino Grammar Rules:
- Ng vs Nang proper usage
- Din vs Rin / Daw vs Raw phonetic matching
- Prefix spacing (nag-, pag-, pinaka-, ka-...-an)
- Redundancy detection (mga mga, ng ng)
- May vs Mayroon context-aware usage
- Common misspellings (kase â†’ kasi)
- Hyphenation (pag-asa)

Technical Implementation:
- filipino-rules.js: 35+ Filipino grammar patterns
- language-detector.js: Marker-based language detection
- Updated content-enhanced.js with multi-language support
- Language settings in options page
- Website demo with language selector

Documentation:
- FILIPINO-SUPPORT.md: Comprehensive feature guide
- Updated README.md with bilingual support
- Updated CHANGELOG.md with v2.1.0 details
- Examples and usage instructions

Salamat sa paggamit ng GrammarGuard! ðŸ‡µðŸ‡­

--- a/options.html
+++ b/options.html
@@ -90,6 +90,17 @@
         <h2>What to Check</h2>
         
         <div class="setting-group">
+          <label>Language / Wika:</label>
+          <select id="language">
+            <option value="auto">🌐 Auto-Detect</option>
+            <option value="en" selected>🇺🇸 English</option>
+            <option value="fil">🇵🇭 Filipino (Tagalog)</option>
+            <option value="both">🌍 Both (English + Filipino)</option>
+          </select>
+          <p class="setting-description">Choose which language(s) to check. Auto-detect will identify the language automatically.</p>
+        </div>
+        
+        <div class="setting-group">
           <label class="setting-label">
             <input type="checkbox" id="checkSpelling" checked>
             <span>Spelling errors</span>
