ðŸ† Update achievements system: English-only tips, remove dashboard, create working achievements page
- Tips of the Day now show ONLY English tips (removed Filipino tip)
- Added 6 more English grammar tips (Their/There/They're, Affect/Effect, Your/You're, Fewer/Less, Who/Whom, Then/Than)
- Removed 'Full Dashboard' button from popup
- Created complete achievements.html page with beautiful UI
- Created achievements.css with responsive design and animations
- Created achievements.js with real-time achievement tracking
- Achievements page shows:
  * All achievements with icons, names, descriptions
  * Locked/unlocked status
  * Progress bars for locked achievements
  * Filter tabs (All, Unlocked, Locked, Words, Streaks, Corrections, Accuracy)
  * Overall completion percentage
  * Real-time updates every 5 seconds
- Achievements now properly track:
  * Words written (100, 1k, 10k, 50k, 100k)
  * Streaks (3, 7, 30, 100 days)
  * Corrections (10, 100, 1000)
  * Accuracy (95%, 99%, 100%)
  * Levels (5, 10, 25, 50)
  * Daily goals and first session
- Added streak achievement checking when streaks update
- Fixed popup to show single 'View All Achievements' button
- All achievements are now properly linked and functional!

--- a/popup-enhanced.html
+++ b/popup-enhanced.html
@@ -124,11 +124,8 @@
 
     <!-- Action Buttons -->
     <div class="action-buttons">
-      <button class="btn btn-primary" id="dashboardBtn">
-        📊 Full Dashboard
-      </button>
-      <button class="btn btn-secondary" id="achievementsBtn">
-        🏆 Achievements
+      <button class="btn btn-primary" id="achievementsBtn">
+        🏆 View All Achievements
       </button>
     </div>
 
