--- a/website/index.html
+++ b/website/index.html
@@ -35,6 +35,7 @@
   <link rel="stylesheet" href="download-section.css">
   <link rel="stylesheet" href="new-sections.css">
   <link rel="stylesheet" href="forms-suggestions.css">
+  <link rel="stylesheet" href="live-chat.css">
 </head>
 <body>
   <!-- Navigation -->
@@ -1232,6 +1233,93 @@
       </svg>
       Download
     </a>
+  </div>
+
+  <!-- Live Chat Widget -->
+  <div class="chat-widget" id="chatWidget">
+    <!-- Chat Button (when closed) -->
+    <button class="chat-toggle-btn" id="chatToggleBtn">
+      <svg class="chat-icon" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+        <path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"></path>
+      </svg>
+      <svg class="close-icon" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+        <line x1="18" y1="6" x2="6" y2="18"></line>
+        <line x1="6" y1="6" x2="18" y2="18"></line>
+      </svg>
+      <span class="chat-notification-badge" id="chatNotificationBadge">1</span>
+    </button>
+
+    <!-- Chat Box -->
+    <div class="chat-box" id="chatBox">
+      <!-- Chat Header -->
+      <div class="chat-header">
+        <div class="chat-header-info">
+          <h3>💬 Live Chat</h3>
+          <p class="chat-status">
+            <span class="status-dot"></span>
+            <span id="onlineCount">12</span> users online
+          </p>
+        </div>
+        <button class="chat-minimize-btn" id="chatMinimizeBtn">
+          <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+            <line x1="5" y1="12" x2="19" y2="12"></line>
+          </svg>
+        </button>
+      </div>
+
+      <!-- Join Form (shown first time) -->
+      <div class="chat-join-form" id="chatJoinForm">
+        <div class="chat-join-content">
+          <div class="chat-join-icon">👋</div>
+          <h3>Welcome to our community!</h3>
+          <p>Join the conversation with other GrammarGuard users</p>
+          <input type="text" id="chatUsername" placeholder="Enter your name..." maxlength="20">
+          <button class="btn btn-primary" id="joinChatBtn">Join Chat</button>
+        </div>
+      </div>
+
+      <!-- Chat Messages Area -->
+      <div class="chat-messages" id="chatMessages">
+        <!-- Welcome message -->
+        <div class="chat-message system">
+          <div class="message-content">
+            <p>Welcome to GrammarGuard Live Chat! 🎉</p>
+          </div>
+        </div>
+      </div>
+
+      <!-- Chat Input -->
+      <div class="chat-input-area" id="chatInputArea" style="display: none;">
+        <div class="chat-input-wrapper">
+          <button class="emoji-btn" id="emojiBtn" title="Add emoji">
+            😊
+          </button>
+          <input type="text" id="chatMessageInput" placeholder="Type a message..." maxlength="500">
+          <button class="send-btn" id="sendMessageBtn">
+            <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+              <line x1="22" y1="2" x2="11" y2="13"></line>
+              <polygon points="22 2 15 22 11 13 2 9 22 2"></polygon>
+            </svg>
+          </button>
+        </div>
+        
+        <!-- Emoji Picker -->
+        <div class="emoji-picker" id="emojiPicker" style="display: none;">
+          <button class="emoji-option">😊</button>
+          <button class="emoji-option">😂</button>
+          <button class="emoji-option">❤️</button>
+          <button class="emoji-option">👍</button>
+          <button class="emoji-option">🎉</button>
+          <button class="emoji-option">🔥</button>
+          <button class="emoji-option">✨</button>
+          <button class="emoji-option">💯</button>
+          <button class="emoji-option">👏</button>
+          <button class="emoji-option">🙏</button>
+          <button class="emoji-option">💪</button>
+          <button class="emoji-option">🚀</button>
+        </div>
+      </div>
+    </div>
   </div>
 
   <script src="script.js"></script>
